# sudan-digital-archive-api

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  README.MD  docker-compose.local.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml
entity/: Cargo.toml
entity/src/: accession.rs  accessions_with_metadata.rs  api_key.rs  archive_user.rs  dublin_metadata_ar.rs  dublin_metadata_ar_subjects.rs  dublin_metadata_en.rs  dublin_metadata_en_subjects.rs  dublin_metadata_subject_ar.rs  dublin_metadata_subject_en.rs  lib.rs  sea_orm_active_enums.rs  session.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241224_163000_accessions.rs  m20250212_014525_optional_metadata_description.rs  m20250217_012314_subjects_more_like_tags.rs  m20250310_013018_add_auth.rs  m20250712_072835_add_researcher_role.rs  m20250921_203431_add_full_text_search.rs  m20251001_220752_rebuild_full_text_indices.rs  m20251017_164508_add_s3_spaces_filename.rs  m20251111_214709_add_api_keys.rs  m20260105_012142_optional_browsertrix_fields_in_accessions.rs  m20260111_121608_add_contributor_role.rs
src/: app_factory.rs  auth.rs  config.rs  main.rs  open_api_spec.rs  test_tools.rs
src/models/: auth.rs  common.rs  mod.rs  request.rs  response.rs
src/repos/: accessions_repo.rs  auth_repo.rs  browsertrix_repo.rs  emails_repo.rs  filter_builder.rs  mod.rs  s3_repo.rs  subjects_repo.rs
src/routes/: accessions.rs  auth.rs  health.rs  mod.rs  subjects.rs
src/services/: accessions_service.rs  auth_service.rs  mod.rs  subjects_service.rs
