[package]
name = "sudan-digital-archive-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity"}
axum = { version="0.8.1", features=["macros", "multipart"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["timeout", "trace", "validate-request", "set-header", "propagate-header", "compression-full", "cors"] }
tower = "0.5.2"
aws-config = "1.1.1"
aws-sdk-s3 = "1.14.0"
aws-types = "1.1.1"
aws-smithy-types = { version = "1.0.1", features = ["http-body-0-4-x"] }
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
http-body-util = "0.1.2"
sea-orm = {version = "1.1.13", features=["macros", "runtime-tokio-native-tls", "sqlx-postgres"]}
async-trait = "0.1.83"
serde_json = "1.0.134"
bytes = "1.5.0"
validator = { version = "0.19.0", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
reqwest = { version = "0.12.22", features=["json"] }
uuid = { version="1.11.0", features=["v4"] }
chrono = "0.4.39"
http = "1.2.0"
tower_governor = { version = "0.6.0", features = ["axum"] }
axum-extra = { version = "0.10.0", features = ["cookie","query", "typed-header"] }
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
utoipa = { version = "5.4.0", features = ["axum_extras",] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-axum = "0.2.0"
sha2 = "0.10.8"
base64 = "0.22.0"
rand = "0.8.5"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "reqwest"] }

[dev-dependencies]
mime = "0.3.17"
pretty_assertions = "1.4.1"
